# friendly_sonar

./: .gitignore  README.md  setup.cfg  test.csv  test_expected.txt  test_expected_no_issues.txt  tox.ini
