[metadata]
name = friendly_sonar
author = Luis Cruz
author-email = luismirandacruz@gmail.com
summary = Python3 library to statically analyze software using SonarLint and collect data in a Python Object, CSV, or JSON data format
license = MIT
description-file =
    README.md
home-page = https://luiscruz.github.io/
requires-python = >=3.6
classifier = 
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering
    Topic :: Utilities
[files]
packages =
    friendly_sonar

[flake8]
filename = ./lint.py
ignore = E101,E241

